<resources>
    <string name="app_name">gb-advanced2</string>
    <string name="search_fab_description">search</string>
    <string name="button_search">search</string>
    <string name="clear_text">clear text</string>
    <string name="search_hint">search</string>
    <string name="progress_description">loading progress</string>
    <string name="history_fab_description">History</string>
    <string name="unimplemented">Unimplemented</string>
</resources>