<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="205dp"
    android:layout_marginBottom="@dimen/margin_medium"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/search_button_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/button_search" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_large">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_edit_text"
                style="@style/BaseTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/clear_text_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginTop="@dimen/margin_small"
            android:contentDescription="@string/clear_text"
            android:src="@drawable/ic_clear_text"
            android:visibility="visible"
            tools:visibility="visible" />
    </FrameLayout>
</LinearLayout>